Support MacViews focus in WebContentsViewMac

WebContentsViewMac was handling focus related jobs for Cocoa only.
To support MacViewsBrowser, WebContentsViewMac now delegates focus
related jobs to its |delegate_|.

Bug: 710506
Change-Id: I9969c92bdf9e3d17ce185ecf4bfb67e165bea41e