chrome/browser/ui/views/tab_contents/chrome_web_contents_view_delegate_views_mac.h
@@ -7,17 +7,28 @@
 
 #import "chrome/browser/ui/cocoa/tab_contents/chrome_web_contents_view_delegate_mac.h"
 
+namespace views {
+class FocusManager;
+}
+
 // A MacViews specific class that extends ChromeWebContentsViewDelegateMac.
 class ChromeWebContentsViewDelegateViewsMac
     : public ChromeWebContentsViewDelegateMac {
  public:
   explicit ChromeWebContentsViewDelegateViewsMac(
       content::WebContents* web_contents);
+  ~ChromeWebContentsViewDelegateViewsMac() override;
 
   // ChromeWebContentsViewDelegateMac:
   void SizeChanged(const gfx::Size& size) override;
+  bool Focus() override;
+  void StoreFocus() override;
+  void RestoreFocus() override;
 
  private:
+  // Used to handle Views related requests, such as restoring view focus.
+  std::unique_ptr<WebContentsViewDelegate> views_delegate_;
+
   DISALLOW_COPY_AND_ASSIGN(ChromeWebContentsViewDelegateViewsMac);
 };
 
