content/shell/browser/shell_web_contents_view_delegate.h
@@ -33,6 +33,7 @@ class ShellWebContentsViewDelegate : public WebContentsViewDelegate {
                        const ContextMenuParams& params) override;
 
 #if defined(OS_MACOSX)
+  bool Focus() override;
   void ActionPerformed(int id);
 #endif
 
